--- a/css/stimmzettel.css
+++ b/css/stimmzettel.css
@@ -1,9 +1,34 @@
 .kandidatur_script_added {
-    height: 1.5em
+    height: 1.5em;
+}
+.a4{
+    width:210mm;
+    height:297mm;
+    border-style: dotted;
+
+}
+.a5{
+    width:297mm;
+    height:210mm;
+    border-style: dotted;
+    transform: rotate(90deg);
+    transform-origin: top left;
+    margin-left:210mm;
+
 }
 
-.a5 .stimmzettel{
-    transform: rotate(-90deg);
-    height: 130mm;
-    width: 130mm
+.stimmzettel {
+
+    padding-top: 25px;
+    padding-left: 30px;
+
 }
+
+@media print
+{
+    #stimmzettel-paper{
+        border-style: none;
+        
+    }
+}
+
